# GAINTRUST

./: .gitignore  HPC_setup.sh  README  README.md  config.json  configurator.py  driver.py  error.py  fixer.py  langchain_example.py  langchain_integration.py  langchain_local_integration.py  llms.py  oracle.py  process.py  semantics.py  settings.py  setup.sh  simple_test.py  supervisor.py  test.sh  test_c_to_rust.py  testdriver.py  transpiler.py  utils.py
Differential_Tester/: Makefile  cov.sh  parallel.sh  statistics.sh
Differential_Tester/c-instrumentor/: Cargo.toml
Differential_Tester/c-instrumentor/src/: lib.rs  parser.rs  template.rs
Differential_Tester/go-instrumentor/: go.mod  imports.go  instrument.go
Differential_Tester/instrumentor/: Cargo.toml
Differential_Tester/instrumentor/src/: communication.rs  impls.rs  lib.rs  main_entry.rs  mangle.rs  syntax.rs  template.rs
Differential_Tester/instrumentor/src/syntax/: lazy_static.rs  match_symbol.rs
analysis/: benchstats.py  c2rust_line_count.py  clippy_aggregate.py  clippy_result.py  config.py  failure_reasons.py  fallback_improvement.py  func_analysis.py  func_loc_analysis.py  intro_stats.py  loc_analysis.py  overall_analysis.py
c2rust-processing/: openaptx.rs  output.h  process.py
c2rust-processing/functions_output/: aptx_bin_search.c  aptx_check_parity.c  aptx_check_parity.rs  aptx_decode.c  aptx_decode.rs  aptx_decode_channel.c  aptx_decode_channel.rs  aptx_decode_samples.c  aptx_decode_samples.rs  aptx_decode_sync.c  aptx_decode_sync.rs  (+61 more)
test_samples/: sample.c
workspace/: sample_factorial.c
(+382 files in other folders)
