[package]
name = "instrumentor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
convert_case = "0.6.0"
lcs = "0.2.0"
petgraph = "0.6.4"
prettyplease = "0.2.15"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "visit", "visit-mut", "extra-traits"] }
